2002-06-07  Marco Pantaleoni  <panta@elasticworld.org>

	* configure.in src/compat.h src/builtin.c src/elastic.c
	src/private.h src/modules/errno_m.c: added the `errno' module.

	* src/lib.c: added `basic.system'

	* src/types/file.c: added `file.popen'.

	* src/modules/posix_m.c: added POSIX functions `stat', `fstat',
	`lstat', `lseek', `mkfifo'.

2002-06-06  Marco Pantaleoni  <panta@elasticworld.org>

	* src/modules/posix_m.c: added POSIX functions `getcwd', `mkdir',
	`rmdir', `chdir', `link', `unlink', `rename', `chmod', `chown',
	`dup', `dup2', `pipe', `fork', `execv', `execve', `execvp',
	`wait', `waitpid', `_exit', `kill', `sleep', `pause', `alarm',
	`setuid', `setgid'.

	* src/modules/posix_m.c: added a `posix.has' hash table, indexed
	by symbols like `#access', `#fork', ... indicating if the named
	functionality is implemented or not.

	* private.h cnf.h.in builtin.c modules/posix_m.c
	modules/Makefile.am: made possible to chose between statically
	linked-in and dynamic for the `posix' modules.

	* configure.in compat.h builtin.c elastic.c private.h
	modules/posix_m.c: started implementing a POSIX 1003.1 module.

	* lib.c (EcLibIOErrorClass_New): fixed, it checked for two
	parameters and it received three.

	* configure.in: added --with-module-posix option (possible values:
	no/static/dynamic)

	* configure.in: fixed a problem with MKMODULEFLAGS

	* memory.h memory.c (ec_allocpool): fixed C++ compatibility
	problem: we had a typedef (ec_mempool) with the same name of a
	struct. Now the struct is named ec_mempool_struct.

2002-06-06  Marco Pantaleoni  <panta@elasticworld.org>

	* src/compat.h src/builtin.c src/elastic.c src/private.h
	src/modules/posix_m.c: started implementing a POSIX 1003.1
	module.

	* src/lib.c (EcLibIOErrorClass_New): fixed, it checked for two
	parameters and it received three.

	* src/memory.h src/memory.c (ec_allocpool): fixed C++
	compatibility problem: we had a typedef (ec_mempool) with the same